# gaiaFTCL

./: .gitattributes  .gitignore  CANONICAL_ZSH_SCRIPTS_SUMMARY.md  CI_Honesty_Change_Report.md  Cargo.toml  FINAL_ZSH_SWIFT_ARCHITECTURE.md  GFTCL-PQ-001_PQ_Specification.docx  GitGame_Plan.md  LICENSE  QUALIFICATION_NO_BASH_SUMMARY.md  README.md  Scenarios_Physics_Frequencies_Assertions.md  lychee.toml  test_qualification_clean_clone.sh
GAIAOS/: .gitignore  CICD_ARCHITECTURE.md  Cargo.toml  LIVE_QUALIFICATION_GUIDE.md  OPEN_THESE_DOCS_FIRST.md  Package.swift  README.md  docker-compose.cell.yml
GAIAOS/.cursor/rules/: git-push-receipt.mdc  mac-qualification-no-bash.mdc  mac-qualification-zsh-swift.mdc
GAIAOS/.github/workflows/: build-push-images.yml  ci.yml  deploy-cells.yml  gaiafusion-gamp5-validation.yml  self_state_validation.yml
GAIAOS/Sources/GaiaFTCLCore/: GaiaFTCLCore.swift
GAIAOS/config/schemas/: plant_config.schema.json  telemetry.schema.json
GAIAOS/deploy/mailcow_head/: docker-compose.override.yml  mailcow.ADDITIONAL_SAN.snippet
GAIAOS/evidence/: MCP_DEPLOYMENT_FINAL_STATUS.md  PHASE_A_BYTE_MATCH_TRANSCRIPT.md  SHELL_PREFERENCE_ZSH_UPDATE.md  closed_loop_great_owl_ingest_witness.json  dmg_build_attempt_20260403.txt  great_owl_gaiaftcl_dialogue_20260319.json  meningococcal_great_owl_discovery_batch.json  mesh_health_snapshot_latest.txt  next_build_gaiaos_ui_web_latest.txt  playwright_gaiaos_ui_web_20260403.txt  playwright_gaiaos_ui_web_20260403_tier3.txt  signature_1487798260339966023.json  svelte_membrane_build_latest.txt
GAIAOS/evidence/agent_census/: PROOF_BACKLOG.json  README.md  scoreboard.md  topology_20260201_113920.json  topology_20260201_120032.json  topology_20260201_120210.json  topology_20260201_120227.json  verify_agent_census_v1.sh  verify_certificate_and_scoreboard.sh
GAIAOS/evidence/closure_game/: CLOSURE_GAME_REPORT.json  domain_contract.schema.json  refusal_reasons.json  report_schema_version.json  verify_closure_game_v1.sh
GAIAOS/evidence/discord/: C4_CELL_EARTH_AUDIT.json  DISCORD_APPLICATION_METADATA_WITNESS.json  DISCORD_SETUP_WITNESS_20260405T200921Z.json  GAIAFTCL_PROD_RELEASE_20260406T1318Z.docx  GAIAFTCL_PROD_RELEASE_20260406T1327Z.docx  LATEST_SCREENSHOT_VALIDATION.json
GAIAOS/evidence/discord_closure/: SIAC_WITNESS.json
GAIAOS/evidence/discord_game_rooms/: DOMAIN_UI_GAMEPLAY_WITNESS.json  PLAYWRIGHT_MESH_GAME_CAPTURE.json  QUANTUM_ALGO_UI_GAMEPLAY_WITNESS.json
GAIAOS/evidence/discord_setup/: automation_log.txt
GAIAOS/evidence/discord_validation/: validation_report.json
GAIAOS/evidence/domain_tubes/: verify_domain_tubes_v1.sh
GAIAOS/evidence/fusion_control/: # Fusion Mac App — Production Plan.md  FLEET_SNAPSHOT_B7_WITNESS_20260405.md  FUSION_FULL_REGRESSION_20260404.json  FUSION_LIMB_BUILD_RECEIPT.json  FUSION_PLANT_FORENSIC_LATEST.json  FUSION_PROCEDURAL_METAL_GEOMETRY_AUDIT_MATRIX.md  FUSION_S4_TEST_CLOSURE_RECEIPT.md  FUSION_SIDECAR_ACTIVE_PLAN.md  FUSION_SIDECAR_FIELD_OF_FIELDS.md  FUSION_SOAK_TEST_REPORT.md  FUSION_UNIVERSAL_PLANT_CONTROL_ASSESSMENT.md  GATE1_LIFT_RECEIPT.md  GATE1_LIFT_RECEIPT.template.md  MENTAL_SNAPSHOT_MAC_FUSION_MESH_CELL.md  RELEASE_REPORT_20260410T124459Z.json  RELEASE_REPORT_20260410T124459Z.md  RELEASE_REPORT_20260410T125448Z.json  RELEASE_REPORT_20260410T125448Z.md  RELEASE_REPORT_20260410T130301Z.json  RELEASE_REPORT_20260410T130301Z.md  RELEASE_REPORT_20260410T131433Z.json  RELEASE_REPORT_20260410T131433Z.md  RELEASE_REPORT_20260410T132714Z.json  RELEASE_REPORT_20260410T132714Z.md  RELEASE_REPORT_20260410T152114Z.json  RELEASE_REPORT_20260410T152114Z.md  RELEASE_VALIDATION_MATRIX_PENDING_REVIEW.json  SUBGAME_Y_WIREFRAME_UNIFORMS_RECEIPT.json  TEST_FUSION_ALL_WITNESS_20260405T162023Z.md  benchmark_pcs_shadow.json  dmg_gate_2000_cycle_receipt.json  fusion_challenge_ledger_receipt.json  fusion_dashboard_dom_snapshot.html  fusion_dashboard_dom_snapshot.json  fusion_dashboard_witness.json  (+71 more)
GAIAOS/language_games/: G_CLAIM_SETTLEMENT_DIAGNOSTIC_L0.ttl
GAIAOS/macos/: MAC_HEALTH_SIL_V2_WIKI_DRAFT.md  README_MAC_QUALIFICATION.md  README_QUALIFICATION_PATHS.md  README_SWIFT_ONLY_QUALIFICATION.md
GAIAOS/scripts/: audit_c4_invariants.sh  backup_founder_wallet.sh  best_control_test_ever.sh  build_and_push_all.sh  build_fusion_control_mac_app.sh  build_fusion_plasma_app_release.sh  build_gaiafusion_release.sh  build_gaiafusion_wasm_pack.sh  build_metal_lib.sh  build_usd_core_xcframework.sh  cell_onboard_founder_mac.sh  check_all_cells.sh  check_ingestion_status.sh  chess_planetary_gate.sh  clear_release_deck.sh  configure_vqbit_logging.py  crystal_remote_deploy.sh  dedupe_env_fragment.py  deploy_cell.sh  deploy_crystal_nine_cells.sh  deploy_dmg_to_mesh.sh  deploy_founder_wallet_system.sh  deploy_mcp_all_cells_final.sh  deploy_mcp_docker_all_cells.sh  deploy_mcp_from_local_binary.sh  deploy_mcp_simple.sh  deploy_mcp_standard.sh  deploy_mcp_to_cell.sh  deploy_mcp_to_cells_final.sh  deploy_mcp_via_registry.sh  deploy_streamlit_to_cell.sh  deploy_wallet_fix_to_cells.sh  diagnose_gaiafusion_swift_test_stall.sh  discord_forest_merge_on_head.sh  discord_mac_focus_for_topology.sh  enable_discord_intents.js  ensure_gaiafusion_dmg.sh  exploit_additional_tools.sh  fast_reingest.py  feed_pcssp.sh  (+93 more)
GAIAOS/services/: deploy_real_oauth.sh  gasm_mcp_ui_oauth_real.rs  oauth_implementation.md
GAIAOS/tests/: fusion_ui_full_test.applescript  run_all.sh  test_closure_game_fail_closed.sh  test_continuity.py  test_dialectic_nats.py  test_dynamic_adapt.py  test_friendship.py  test_identity.py  test_ingest.py  test_uum8d_permission_gate.sh  test_vie_computation_domain.py
GAIAOS/tools/: PROTEIN_INGESTION_COMPLETE.md  extract_batch.sh  ingest.sh  ingestion_daemon.py  live_probe_v1.sh  prove_scheduler_lima.sh  prove_scheduler_remote_one_cell.sh  show_progress.sh  submit_next_batch.py
cells/health/: Cargo.toml  README.md
gaia-metal-renderer/: Cargo.toml  cbindgen.toml  gaia_metal_renderer.h
gaia-metal-renderer/src/: lib.rs  main.rs  plant_geometries.rs  renderer.rs  shaders.rs
tools/bake_mesh/: Cargo.toml
(+3475 files in other folders)
