# Mycelium Protocol workspace — shared NATS language + Apex Anchor (Discord) + Local Cell (worker).
[workspace]
resolver = "2"
# Only list paths that exist in-repo. Missing members break `cargo fmt` / CI on a clean checkout.
members = [
    "services/atc_physics_wasm",
]
exclude = [
    "services/dns_authority",
    "services/fusion_control_mac",
    "services/gaiaos_ui_tester_mcp",
    "services/gaiaos_mcp_server",
]
