[workspace]
resolver = "2"
members = [
    "biologit_md_engine",
    "biologit_usd_parser",
    "gaia-health-renderer",
    "wasm_constitutional",
]

# Workspace-level dependencies shared across crates
[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.10"
hex         = "0.4"
thiserror   = "1"
wallet-core    = { path = "../shared/wallet_core" }
owl-protocol   = { path = "../shared/owl_protocol" }

# Patents: USPTO 19/460,960 | USPTO 19/096,071 — © 2026 Richard Gillespie
