[package]
name = "bake_mesh"
version = "0.1.0"
edition = "2021"
description = "Bakes a USDZ master mesh into the Franklin .fblob production format with FACS-52 blendshape deltas."

# Standalone workspace so this builds cleanly regardless of the parent
# Cargo.toml workspace members (some of which may not be present in slim
# checkouts).
[workspace]

[[bin]]
name = "bake_mesh"
path = "src/main.rs"

[dependencies]
clap   = { version = "4", features = ["derive"] }
sha2   = "0.10"
zip    = "0.6"
byteorder = "1.5"
serde  = { version = "1", features = ["derive"] }
serde_json = "1"
