[package]
name = "adaptive_grid_builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "adaptive-grid-builder"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

airport_registry = { path = "../../crates/airport_registry" }

