[package]
name = "atc-ingest"
version = "0.1.0"
edition = "2021"
description = "GaiaOS ATC Ingest - OpenSky OAuth2 + credit-aware polling + 8D prediction"

[workspace]

[[bin]]
name = "atc-ingest"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
async-nats = "0.17"
rand = "0.8"

