[package]
name = "atc_physics_wasm"
version = "0.1.0"
edition = "2021"
description = "GaiaOS 8D ATC Physics Engine - WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = [
	"console",
	"Window",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"WebGlRenderingContext",
	"WebGl2RenderingContext",
	"WebSocket",
	"MessageEvent",
	"ErrorEvent",
	"CloseEvent",
	"BinaryType",
	"Performance",
	"PerformanceTiming",
	"MouseEvent",
	"WheelEvent",
	"KeyboardEvent",
	"TouchEvent",
	"Touch",
	"TouchList",
	"ImageData",
	"HtmlImageElement",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

# Profile moved to workspace root Cargo.toml
