[package]
name = "atmosphere_global_gfs_ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atmosphere-global-gfs-ingest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }


