[package]
name = "atmosphere_noaa_gfs_flightlevel_ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atmosphere-noaa-gfs-flightlevel-ingest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }


