[package]
name = "digital-twin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
uuid = { version = "1.6", features = ["v4"] }

# Consciousness layer
gaiaos_introspection = { path = "../gaiaos_introspection" }
