[package]
name = "flight-ingest"
version = "1.0.0"
edition = "2021"
description = "GaiaOS Flight Ingest Service - Credit-aware OpenSky integration with 8D prediction"
authors = ["GaiaOS Team"]

[workspace]

[[bin]]
name = "flight-ingest"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# NATS messaging
async-nats = "0.33"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

