[package]
name = "gaia_orchestrator"
version = "0.1.0"
edition = "2021"
description = "GaiaOS AGI Orchestrator - routes tasks through capability gates to domain cores"
authors = ["GaiaOS Team"]

[dependencies]
# Core
uum8d = { path = "../../ftclstack/uum8d" }
gaialm_trainer = { path = "../gaialm_trainer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex for TTL parsing
regex = "1.10"

[[bin]]
name = "gaia_orchestrator"
path = "src/bin/orchestrator.rs"

[[bin]]
name = "test_orchestrator"
path = "src/bin/test_orchestrator.rs"

[[bin]]
name = "console_demo"
path = "src/bin/console_demo.rs"

