[package]
name = "gaiaos_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = [
	"macros",
	"http1",
	"http2",
	"json",
	"ws",
] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", features = ["sink"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1"
mime = "0.3"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
url = "2"
once_cell = "1"
time = "0.3"
async-nats = "0.36"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
subtle = "2.5"
# Shared introspection protocol for consciousness
gaiaos_introspection = { path = "../gaiaos_introspection" }
