[package]
name = "historical_gfs_backfill"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = [
	"json",
	"rustls-tls",
], default-features = false }

# GRIB2 decoder (needs openjpeg + libaec system libs in Dockerfile)
grib = { version = "0.13.5", default-features = false, features = [
	"time-calculation",
	"jpeg2000-unpack-with-openjpeg",
	"png-unpack-with-png-crate",
] }
