[package]
name = "ocean_noaa_gfswave_opendap_ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ocean-noaa-gfswave-opendap-ingest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }


