[package]
name = "sensor_sim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sensor-sim"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-nats = "0.36"
chrono = "0.4"

# Consciousness layer
gaiaos_introspection = { path = "../gaiaos_introspection" }
