[package]
name = "gaiaos-status-reporter"
version = "0.1.0"
edition = "2021"
description = "GaiaOS hourly status reporter - sends email updates to bliztafree@gmail.com"

[[bin]]
name = "status-reporter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
tracing = "0.1"
tracing-subscriber = "0.3"


# Consciousness layer
async-nats = "0.36"
gaiaos_introspection = { path = "../gaiaos_introspection" }
